--- a/views/productos.html
+++ b/views/productos.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <script defer src="../js/productos.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 </head>
 <body>
     <header>
@@ -25,56 +28,25 @@
 
     <main>
         <h1>Nuestros productos</h1>
-        <div class="grid">
-            <div class="item">
-                <img src="../img/producto1.jpg" alt="Producto 1" width="350" height="350">
-                <p>Producto 1</p>
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="../img/producto1.jpg" alt="Producto 1"></div>
+                <div class="swiper-slide"><img src="../img/producto2.jpg" alt="Producto 2"></div>
+                <div class="swiper-slide"><img src="../img/producto3.jpg" alt="Producto 3"></div>
+                <div class="swiper-slide"><img src="../img/producto4.jpg" alt="Producto 4"></div>
+                <div class="swiper-slide"><img src="../img/producto5.jpg" alt="Producto 5"></div>
+                <div class="swiper-slide"><img src="../img/producto6.jpg" alt="Producto 6"></div>
+                <div class="swiper-slide"><img src="../img/producto7.jpg" alt="Producto 7"></div>
+                <div class="swiper-slide"><img src="../img/producto8.jpg" alt="Producto 8"></div>
+                <div class="swiper-slide"><img src="../img/producto9.jpg" alt="Producto 9"></div>
+                <div class="swiper-slide"><img src="../img/producto10.jpg" alt="Producto 10"></div>
+                <div class="swiper-slide"><img src="../img/producto11.jpg" alt="Producto 11"></div>
+                <div class="swiper-slide"><img src="../img/producto12.jpg" alt="Producto 12"></div>
             </div>
-            <div class="item">
-                <img src="../img/producto2.jpg" alt="Producto 2" width="350" height="350">
-                <p>Producto 2</p>
-            </div>
-            <div class="item">
-                <img src="../img/producto3.jpg" alt="Producto 3" width="350" height="350">
-                <p>Producto 3</p>
-            </div>
-            <div class="item">
-                <img src="../img/producto4.jpg" alt="Producto 4" width="350" height="350">
-                <p>Producto 4</p>
-            </div>
-            <div class="item">
-                <img src="../img/producto5.jpg" alt="Producto 5" width="350" height="350">
-                <p>Producto 5</p>
-            </div>
-            <div class="item">
-                <img src="../img/producto6.jpg" alt="Producto 6" width="350" height="350">
-                <p>Producto 6</p>
-            </div>
-            <div class="item">
-                <img src="../img/producto7.jpg" alt="Producto 7" width="350" height="350">
-                <p>Producto 7</p>
-            </div>
-            <div class="item">
-                <img src="../img/producto8.jpg" alt="Producto 8" width="350" height="350">
-                <p>Producto 8</p>
-            </div>
-            <div class="item">
-                <img src="../img/producto9.jpg" alt="Producto 9" width="350" height="350">
-                <p>Producto 9</p>
-            </div>
-            <div class="item">
-                <img src="../img/producto10.jpg" alt="Producto 10" width="350" height="350">
-                <p>Producto 10</p>
-            </div>
-            <div class="item">
-                <img src="../img/producto11.jpg" alt="Producto 11" width="350" height="350">
-                <p>Producto 11</p>
-            </div>
-            <div class="item">
-                <img src="../img/producto12.jpg" alt="Producto 12" width="350" height="350">
-                <p>Producto 12</p>
-            </div>
-        </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+        </div>       
     </main>
     <footer>
         <p>Calle Ejemplo 123, Ciudad, País</p>
@@ -94,5 +66,28 @@
             </a>
         </div>
     </footer>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            new Swiper(".swiper-container", {
+                slidesPerView: 3,
+                spaceBetween: 10,
+                loop: true,
+                navigation: {
+                    nextEl: ".swiper-button-next",
+                    prevEl: ".swiper-button-prev",
+                },
+                pagination: {
+                    el: ".swiper-pagination",
+                    clickable: true,
+                },
+                breakpoints: {
+                    768: { slidesPerView: 3 },
+                    480: { slidesPerView: 2 },
+                    320: { slidesPerView: 1 },
+                },
+            });
+        });
+    </script>
 </body>
 </html>
